--- a/views/forma.html
+++ b/views/forma.html
@@ -9,8 +9,7 @@
         <link rel = "stylesheet" href="css/estilo1.css">
     </head>
     <body>
-        <h1> Pagina desde archivo</h1>
-    <img src = "images/Imagen.jpg"/>
+        <p class = "clase1">Examen 1</p>
         <div class="container">
             <h1>Inserta los datos de tu tarjeta bancaria</h1>
             <form method="POST" action="/consola/examen/validacion">
